@@ -6,8 +6,6 @@ Team
 - druhe heslo pro read-only login pro pratele na telefonu
 - Prehravani audio/video v prohlizeci (HTML5)
 
-
-- zobrazovat cenu napovedy pred stisknutim tlacitka
  
 HQ
 --
