@@ -45,6 +45,7 @@ $lang_str['iquest_txt_your_place'] =                    "Vaše pořadí";
 $lang_str['iquest_txt_wallet_state'] =                  "Vaše peněženka";
 
 $lang_str['iquest_btn_buy_hint'] =                      "Kup nápovědu!";
+$lang_str['iquest_btn_buy_hint_price'] =                "(<price> {$lang_str['iquest_txt_coin_symbol']})";
 $lang_str['iquest_conf_buy_hint'] =                     "Opravdu si přejete utratit <price> {$lang_str['iquest_txt_coin_symbol']} za další nápovědu?";
 
 $lang_str['iquest_txt_contest_begins_at'] =             "Soutěž začíná <date> v <time>.";
